- coments e new social media icon

--- a/FooterSocialMedia/footerSocialMedia.less
+++ b/FooterSocialMedia/footerSocialMedia.less
@@ -5,18 +5,11 @@
     width:100%;
 }
 
+
+// verificar posicionamento dos textos nas mídias menores
 .address{text-align:left;}
 
 .ms-icons{text-align:right;}
-
-.facebook:after{
-    content: "\f09a";
-    font-family: FontAwesome;
-    color: #fff;
-    font-weight: bold;
-    font-size:25px;
-    margin: 0px 10px;
-}
 
 .instagram:after{
     content: "\f16d";
@@ -29,6 +22,33 @@
 
 .twitter:after{
     content: "\f099";
+    font-family: FontAwesome;
+    color: #fff;
+    font-weight: bold;
+    font-size:25px;
+    margin: 0px 10px;
+}
+
+.facebook:after{
+    content: "\f09a";
+    font-family: FontAwesome;
+    color: #fff;
+    font-weight: bold;
+    font-size:25px;
+    margin: 0px 10px;
+}
+
+.youtube:after{
+    content: "\f167";
+    font-family: FontAwesome;
+    color: #fff;
+    //font-weight: bold;
+    font-size:25px;
+    margin: 0px 10px;
+}
+
+.spotify:after{
+    content: "\f1bc";
     font-family: FontAwesome;
     color: #fff;
     font-weight: bold;
